Upgraded the PRISMS architecture considerably. Several of these break backward compatibility. Some included changes are:
* Removed the PRISMS application/client/permissions structures from the user source (and hence the database) into static XML files. Made users to have IDs (instead of only the database implementation which was not public). These IDs are now long values. I intend to make these synergize with the synchronization records users. Because of these changes, the manager application is now simplified considerably.
* Modularized authentication so that new authentication methods can be developed independently and applied to the PRISMS deployment with configuration.
* A few changes to records, including untested HTTPS connectivity and a progress dialog for navigation in the history viewer.
* Made it possible to share property values between applications.  These are shared similarly to properties shared between sessions.